syntax = "proto3";

package grpcperson;

option java_package = "com.cinematic.grpcperson";

option java_multiple_files = true;

service PersonService {
  rpc getPerson(PersonRequest) returns (PersonResponse) {};
}

message PersonRequest {
  string name = 1;
  string surname = 2;
}
message PersonMessage {
  string name = 1;
  string surname = 2;
}
message PersonResponse {
  PersonMessage message = 1;
}
